Add animations and code sections to main page

--- a/index.html
+++ b/index.html
@@ -95,7 +95,24 @@
 
 <!-- MAIN CONTENT -->
 <div class="main-content">
-    <!-- The main content will go here -->
+    <div class="section-container">
+        <div class="section-content">
+            <h2>Animations</h2>
+            <p>A collection of animations has been developed for graduate courses and conferences to explain complex topics in geomechanics and numerical modeling in a more visual and intuitive way. You are encouraged to use them in your teaching, presentations, or other academic work.</p>
+            <a href="animations/docs/index.html">Go to Animations</a>
+        </div>
+        <div class="section-media">
+            <video src="assets/videos/Load_intro.mp4" autoplay muted loop playsinline></video>
+            <figcaption>Pore pressure and displacement magnitude under a load application.</figcaption>
+        </div>
+    </div>
+
+    <div class="section-container">
+        <div class="section-content">
+            <h2>Code (WIP)</h2>
+            <p>This section is currently under construction. Please check back later for updates.</p>
+        </div>
+    </div>
 </div> <!-- end of main-content -->
 </body>
 </html>
