Update video caption

--- a/index.html
+++ b/index.html
@@ -97,13 +97,23 @@
 <div class="main-content">
     <div class="section-container">
         <div class="section-content">
-            <h2>Animations</h2>
-            <p>A collection of animations has been developed for graduate courses and conferences to explain complex topics in geomechanics and numerical modeling in a more visual and intuitive way. You are encouraged to use them in your teaching, presentations, or other academic work.</p>
-            <a href="animations/docs/index.html">Go to Animations</a>
+            <h2>Welcome to GeomechMotion</h2>
+            <p>This is an informal public page that gathers the animations and code snippets I have created for different courses and conferences. Feel free to browse and use the resources you find here.</p>
         </div>
         <div class="section-media">
-            <video src="assets/videos/Load_intro.mp4" autoplay muted loop playsinline></video>
-            <figcaption>Pore pressure and displacement magnitude under a load application.</figcaption>
+            <img src="assets/icons/logo.png" alt="GeomechMotion Logo" class="intro-logo">
+        </div>
+    </div>
+
+    <div class="section-container">
+        <div class="section-content">
+            <h2>Animations</h2>
+            <p>A collection of animations has been developed for graduate courses and conferences to explain complex topics in geomechanics and numerical modeling in a more visual and intuitive way. You are encouraged to use them in your teaching, presentations, or other academic work.</p>
+            <a href="https://geomechmotion.github.io/animations">Go to Animations</a>
+        </div>
+        <div class="section-media">
+            <video src="assets/videos/Intro_animations.mp4" autoplay muted loop playsinline></video>
+            <figcaption>CPTWidget Cavity expansion representation</figcaption>
         </div>
     </div>
 
