Apply dark theme to welcome section and resize logo

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="prof-mini-img">
             <img src="assets/images/alejo_sfriso.jpg" alt="Alejo Sfriso">
         </div>
-        <a class="prof-mini-name" href="https://es.linkedin.com/in/alejo-o-sfriso-45322037" target="_blank">
+        <a class="prof-mini-name" href="httpshttps://es.linkedin.com/in/alejo-o-sfriso-45322037" target="_blank">
             Alejo Sfriso
             <img src="assets/icons/linkedin.png" class="icon-li">
         </a>
@@ -95,7 +95,7 @@
 
 <!-- MAIN CONTENT -->
 <div class="main-content">
-    <div class="section-container">
+    <div class="section-container welcome-section">
         <div class="section-content">
             <h2>Welcome to GeomechMotion</h2>
             <p>This is an informal public page that gathers the animations and code snippets I have created for different courses and conferences. Feel free to browse and use the resources you find here.</p>
