Add hyperlink to sidebar logo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 <div class="sidebar">
 
     <div class="brand-logo">
-        <img src="assets/icons/logo.png" alt="GeomechMotion Logo">
+        <a href="https://geomechmotion.github.io/">
+            <img src="assets/icons/logo.png" alt="GeomechMotion Logo">
+        </a>
     </div>
 
     <div class="brand-name">GeomechMotion</div>
@@ -79,7 +81,7 @@
         <div class="prof-mini-img">
             <img src="assets/images/alejo_sfriso.jpg" alt="Alejo Sfriso">
         </div>
-        <a class="prof-mini-name" href="httpshttps://es.linkedin.com/in/alejo-o-sfriso-45322037" target="_blank">
+        <a class="prof-mini-name" href="https://es.linkedin.com/in/alejo-o-sfriso-45322037" target="_blank">
             Alejo Sfriso
             <img src="assets/icons/linkedin.png" class="icon-li">
         </a>
